tests/toylang/neg/001696_mutation.toylang
program a = { while var do sleep; } .
